feat: :sparkles: add editable fields detail page | refactor other

--- a/src/frontend/src/app/index.css
+++ b/src/frontend/src/app/index.css
@@ -65,4 +65,12 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+
+	[hidden] {
+		display: none !important;
+	}
+
+	[hidden='until-found'] {
+		display: none !important;
+	}
 }
