--- a/src/frontend/src/app/index.css
+++ b/src/frontend/src/app/index.css
@@ -62,6 +62,9 @@
 	* {
 		@apply border-border;
 	}
+	/* html {
+		scrollbar-gutter: stable;
+	} */
 	body {
 		@apply bg-background text-foreground;
 	}
